--- a/liff.html
+++ b/liff.html
@@ -24,7 +24,7 @@
         document.getElementById("getDecodedIDToken").innerHTML = '<b>Email:</b> ' + liff.getDecodedIDToken().email;
       }).catch(err => console.error(err));
     }
-    liff.init({ liffId: "YOUT-LIFF-ID" }, () => {
+    liff.init({ liffId: "1655742895-WDBNnoEY" }, () => {
       if (liff.isLoggedIn()) {
         runApp()
       } else {
